# cpp_vulkan_conan_template

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  conanfile.py  init.py  run.py
assets/models/: monkey.glb  sphere.glb
assets/shaders/: brdf.frag  brdf.vert  convolution.frag  cubemap.frag  cubemap.vert  equiToCube.frag  equiToCube.vert  mesh.frag  mesh.vert  pbr.frag  pbr.vert  prefilter.frag  prefilter.vert  triangle.frag  triangle.vert
src/: Logger.cpp  Logger.hpp  main.cpp  pch.cpp  pch.hpp
src/Structures/Mesh/: mesh.cpp  mesh.hpp  mesh_vertex.cpp  mesh_vertex.hpp
src/renderer/: Config.hpp  GraphicsContext.cpp  GraphicsContext.hpp  Logger.cpp  PBRRenderer.cpp  PBRRenderer.hpp  Window.cpp  Window.hpp
src/renderer/Helper/: Conversions.cpp  Conversions.hpp  Debug.hpp  Initializers.cpp  Initializers.hpp
src/renderer/Types/: Buffer.cpp  Buffer.hpp  Commands.cpp  Commands.hpp  Image.cpp  Image.hpp  Pipeline.cpp  Pipeline.hpp  Renderpass.cpp  Renderpass.hpp  Synchronization.cpp  Synchronization.hpp  Texture.cpp  Texture.hpp
